--- a/css/styles.css
+++ b/css/styles.css
@@ -24,24 +24,17 @@ header{
     text-align: justify;
     list-style: none;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold; 
+    font-weight: bold;    
  }
-
-#menu li {
+#menu .submenu li{
     position:relative;
-    display:inline-block;
-}
-
-#menu .submenu{
-margin-top:34px;
-
-
+    top:19px;
+    display:inline;
 }
 .submenu li a{   
     text-decoration: none;
     color:black;    
-    margin-left: 30px;
-        
+    margin-left:30px;  
 }
  #menu li a:hover{
     color:white;
@@ -56,46 +49,49 @@ margin-top:34px;
 
 /*css para submenus*/
 .submenu1{  
-    display: block; 
+    display:block; 
     position:absolute;    
     background:#333333;
-    padding-top:10px;
-    padding-left:5px;
-    padding-right:10px;
-    visibility:hidden;
-      
+    margin-left:210px;
+    padding-left:10px;
+    padding-bottom:20px;
+    visibility:hidden;      
 }
-.submenu1 li a{      
+.submenu1 li a{ 
+    display:inline-block;
     color: white;
     text-decoration: none;
-    margin-left:28px;
-    margin-right:25px;
-    line-height: 200%;         
+    margin: auto;
+    margin-left:20px;
+    margin-right:35px;
+    line-height: 170%;         
 }
 
 .submenu2{
-    display: block;
+    display:block;
     position: absolute;
-    background-color:#333333; 
+    background-color:#333333;
+    margin-left: 410px; 
     padding:0px;
-    padding-top:10px;
-    padding-right:30px; 
+    padding-bottom: 30px;
     visibility:hidden;                
 }
-.submenu2 li a{ 
+.submenu2 li a{  
     color: white;
     text-decoration: none;
-    line-height: 200%;  
+    margin-left:40px;
+    margin-right:15px;
+    line-height: 160%;  
 }
 .submenu1 li a:hover {
     background-color:#068CE4;
-    padding:8px;
-    transition: all 1000ms;      
+    padding:2px;
+    transition: all 800ms;      
  }
  .submenu2 li a:hover {
     background-color:#068CE4;
-    padding:8px;
-    transition: all 1000ms;      
+    padding:2px;
+    transition: all 800ms;      
  }
 
  /* CSS PARA ICONS Y BUSCADOR*/
@@ -117,28 +113,34 @@ margin-top:34px;
      padding-top: 20px;
      padding-right:397px;
      text-align: justify;
+     align-items: center;
      z-index: 1;             
      border: none;
      outline:none;
 }
-.boxsearch{
+.boxsearch{ 
    position:fixed;
-   top:0px;
-   left:50%;
-   transform:translateX(-71.4%);
-   padding-bottom:120px;
+   top:38.4px;
+   left:50%; 
+   transform: translateX(-192%); 
+   padding-bottom:10px;
    padding-right:50px;
-   background-color:white;
+   background-color:#333333;
    z-index:2;
-   display:inline;
-   
+   display:none;
+    
 }
 .boxsearch li a{
     display:block;
-    
+    color: white;
+    text-decoration: none;
+    padding-top:15px;
 }
 
+.boxsearch li a:hover{
+   background-color:#068CE4;
 
+}
  #iconshop{
      position: relative;
      background-color:#F1E7E8 ;
