--- a/css/registro.css
+++ b/css/registro.css
@@ -37,9 +37,9 @@ body{
   .button{
       border: none;
       color:white;
-      width:90%;
+      width:82.5%;
       background-color:#4668af;
-      margin-left:25px;
+      margin-left:54px;
       margin-top: 15px;
       padding-top:15px;
       padding-bottom: 15px;
@@ -57,10 +57,23 @@ p a{
     background: #04C1A2;
 }
 
-P{
+.mensajeError{
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;    
+    text-align:center;
+    margin:5px;
+    margin-left:29px;
+    background-color:#E95050; 
+    width:88%; 
+
+}
+
+.terminos{
     margin-left:20px;
+    margin-top:60px;
     margin-right:20px;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
