--- a/css/registro.css
+++ b/css/registro.css
@@ -4,8 +4,7 @@ body{
 }
 .loginlogo{
     margin-left:35%;
-    margin-top:100px;
-    
+    margin-top:60px;    
 }
 #formulario{
     background-color: #fff;
@@ -75,7 +74,7 @@ p a{
 
 .terminos{
     margin-left:20px;
-    margin-top:60px;
+    margin-top:25px;
     margin-right:20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -83,8 +82,13 @@ p a{
 
 
 @media (max-width:1250px){
-    #formulario{
+    #formulario {
         margin:auto;
         width:100%;        
+    }
+    .loginlogo{
+        margin:auto;
+        width:100%; 
+
     }
 }
