--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 html{
     background-color: aliceblue;
 }
-#principal {
+#principal{
     background: url("../media/compras.png");
     margin:0px;
     height:1000px;
@@ -98,13 +98,18 @@ header{
 
  #iconsearch{  
      position:relative;
-     background-color: #FD6D37;    
+     background-color: #FF8503;    
      margin-top:10px;
-     margin-left:599px; 
+     margin-left:600px;    
      padding:10px;
      justify-content: center;
-     align-items: center;              
+     align-items: center;
+     cursor: pointer;              
  }
+ #iconsearch:hover{
+    color: #068CE4;
+
+}
 #search{
      position:absolute;
      background-color:#F1E7E8;
@@ -121,11 +126,10 @@ header{
 #boxsearch{ 
    position:absolute;
    top:38.4px;
-   left:50%; 
-   transform: translateX(-192%); 
-   padding-bottom:10px;
-   padding-right:50px;
+   left:21.3%; 
+   padding-bottom:5px;
    background-color:#333333;
+   color:white;
    z-index:2;
    display:none;
     
@@ -159,6 +163,4 @@ header{
          font-family: Arial, Helvetica, sans-serif;
          text-align: center;
      }
-
-
 
