--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,8 @@ header{
 #boxsearch{ 
    position:absolute;
    top:38.4px;
-   left:21.3%; 
-   padding-bottom:5px;
+   left:21.1%; 
+   padding:10px;
    background-color:#333333;
    color:white;
    z-index:2;
