--- a/css/productos.css
+++ b/css/productos.css
@@ -1,8 +1,7 @@
 #Electrodomesticos{
     background: url("../media/Estufas.jpg");
     margin-top:20px;
-    margin-bottom:50px;
-    margin-left:20px;
+    margin-left:30px;
     width:400px;
     height:250px;
     float: left;        
@@ -11,8 +10,7 @@
 #Licuadora{
     background: url("../media/Cafetera.jpg");
     margin-top:20px;
-    margin-bottom:50px;
-    margin-left:20px;  
+    margin-left:30px;  
     width:400px;
     height:250px;
     float:left;    
@@ -21,9 +19,19 @@
 #Plancha{
     background: url("../media/plancha.jpg");
     margin-top:20px;
-    margin-bottom:50px;
-    margin-left:20px;
+    margin-left:30px;
     width:400px;
     height:250px;
     float: left;              
+}
+  /*CSS PARA EL FOOTER*/
+
+  #reserved{
+    background-color:#2c2c2c;
+    margin-top:500px;
+    padding:10px;
+    color: white;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
