--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ header{
    background-color:#333333;
    color:white;
    z-index:2;
-   display:none;
+   display:block;
     
 }
 #boxsearch li a{
@@ -142,6 +142,7 @@ header{
 
 #boxsearch li a:hover{
    background-color:#068CE4;
+   cursor: pointer;
 
 }
  #iconshop{
