se reemplaza imagen mujercompras

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ html{
     background-color: aliceblue;
 }
 #principal{
-    background: url("../media/compras.png");
+    background: url("../media/mujercompras.jpg");
     margin:0px;
     height:1000px;
    }
