se remplazan imagenes

--- a/css/registro.css
+++ b/css/registro.css
@@ -1,6 +1,6 @@
 *{ box-sizing: border-box;}
 body{
-    background: url("../media/compras2.jpg");
+    background: url("../media/mujercomoras2.jpg");
 }
 .loginlogo{
     margin-left:35%;
