--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,9 @@ html{
 #boxsearch{ 
    position:absolute;
    top:38.4px;
-   left:21.3%; 
-   padding:10px;
+   left:21.35%;
+   padding-left:15px;
+   padding-right:15px;
    background-color:#333333;
    color:white;
    z-index:2;
@@ -131,10 +132,10 @@ html{
     
 }
 #boxsearch li a{
-    display:block;
+    display:inline;
     color: white;
     text-decoration: none;
-}
+    }
 
 #boxsearch li a:hover{
    background-color:#068CE4;
