--- a/css/styles.css
+++ b/css/styles.css
@@ -1,117 +1,78 @@
-*{box-sizing: border-box;}
+*{  margin:0px;
+    padding:0px;
+    box-sizing: border-box;}
 html{
     background-color: aliceblue;
 }
-#principal{
-    background: url("../media/mujercompras.jpg");
-    margin:0px;
+#principal img{
+    width:100%;
     height:1000px;
-   }
-#menu img{
-    float:left;
 }
 
 #menu {
     background-color: #E23E4F;
     width:100%;
     height:100px;
-}
-#menu ul{
-    text-align: justify;
-    list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;    
- }
-#menu .submenu li{
     position:relative;
-    top:19px;
-    display:inline;
+    }
+
+ul,ol{
+    list-style: none;
+     
 }
-.submenu li a{   
-    text-decoration: none;
-    color:black;    
-    margin-left:30px;  
+#menu .submenu{    
+ position:absolute;
+ left:282px;
+ margin:-32px;
+ 
 }
- #menu li a:hover{
-    color:white;
-    transition: all .5s;       
+.submenu li a{
+    display: block;
+    color:#F1E7E8;   
+    text-decoration:none;
+    padding: 5px 25px 5px;
+       
 }
-#menu li:hover .submenu1 {
-    visibility:visible    
-}
-#menu li:hover .submenu2{
-    visibility:visible; 
+.submenu li a:hover{
+    background-color: #068CE4;
 }
 
-/*css para submenus*/
-.submenu1{  
-    display:block; 
-    position:absolute;    
-    background:#333333;
-    margin-left:210px;
-    padding-left:10px;
-    padding-bottom:20px;
-    visibility:hidden;      
-}
-.submenu1 li a{ 
-    display:inline-block;
-    color: white;
-    text-decoration: none;
-    margin: auto;
-    margin-left:20px;
-    margin-right:35px;
-    line-height: 170%;         
+.submenu > li{
+    float: left;     
 }
 
-.submenu2{
+.submenu li ul{
+    display:none;
+    position:absolute;
+    background-color: #2c2c2c;
+    margin-top:0px;
+  }
+
+.submenu li:hover > ul{
     display:block;
-    position: absolute;
-    background-color:#333333;
-    margin-left: 410px; 
-    padding:0px;
-    padding-bottom: 30px;
-    visibility:hidden;                
 }
-.submenu2 li a{  
-    color: white;
-    text-decoration: none;
-    margin-left:40px;
-    margin-right:15px;
-    line-height: 160%;  
-}
-.submenu1 li a:hover {
-    background-color:#068CE4;
-    padding:2px;
-    transition: all 800ms;      
- }
- .submenu2 li a:hover {
-    background-color:#068CE4;
-    padding:2px;
-    transition: all 800ms;      
- }
-
  /* CSS PARA ICONS Y BUSCADOR*/
 
  #iconsearch{  
-     position:relative;
+     position:absolute;
      background-color: #FF8503;    
-     margin-top:10px;
-     margin-left:600px;    
-     padding:10px;
+     left:828px;
+     top:20px;    
+     padding:10px;     
      justify-content: center;
      align-items: center;
-     cursor: pointer;              
+     cursor: pointer;
+     z-index: 1;              
  }
  #iconsearch:hover{
     color: #068CE4;
-
 }
 #search{
      position:absolute;
      background-color:#F1E7E8;
-     margin-top:10px;
-     margin-left:30px;
-     padding-top: 20px;
+     left:260px;
+     top:20px;
+     padding-top:20px;
      padding-right:397px;
      text-align: justify;
      align-items: center;
@@ -121,8 +82,8 @@ html{
 }
 #boxsearch{ 
    position:absolute;
-   top:38.4px;
-   left:21.35%;
+   top:55px;
+   left:260.3px;
    padding-left:15px;
    padding-right:15px;
    background-color:#333333;
@@ -133,7 +94,6 @@ html{
 }
 
 #boxsearch li a{
-    display:inline;
     color: white;
     text-decoration: none;
     }
@@ -144,10 +104,12 @@ html{
 
 }
  #iconshop{
-     position: relative;
+     position:absolute;
      background-color:#F1E7E8 ;
+     top:20px;
+     margin-left:900px;
      padding:10px;
-     left:390px; 
+     left:380px; 
        
 }
      /*CSS PARA EL FOOTER*/
@@ -155,10 +117,25 @@ html{
      #reserved{
          background-color:#2c2c2c;
          margin:0px;
+         margin-top:2900px;
          padding:10px;
          color: white;
          font-weight: bold;
          font-family: Arial, Helvetica, sans-serif;
          text-align: center;
      }
+
+    
+  /*CSS PAGINA GENERAL SAMSUNG A51/71*/
+  @media screen and(max-width:2500px) {
+    #principal img {
+       width:100%;                    
+    }   
+    #menu{
+        width:100%;
+    }        
+              
+     }
+
+ 
 
